# Simple-Shooting-Game

./: CMakeLists.txt  README.md
include/: Bullet.h
src/: Bullet.cpp  main.cpp
